# step-RPA-playwright

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
flows/: cdp-attach.yaml  dianshang.yaml  hacker-news.yaml  quotes-login.yaml  quotes-scrape.yaml  stealth-scrape.yaml
src/pwflow/: __init__.py  browsers.py  cli.py  context.py  engine.py  errors.py  executor.py  loader.py  metrics.py  models.py  observability.py  registry.py  selectors.py  template.py
src/pwflow/actions/: __init__.py  _common.py  assertions.py  control.py  extract.py  interaction.py  misc.py  navigation.py  waits.py
src/pwflow/server/: app.py  store.py
tests/: conftest.py  test_browser_config_render.py  test_browsers.py  test_cloak_live.py  test_context.py  test_e2e.py  test_extract.py  test_loader.py  test_metrics.py  test_observability.py  test_server.py  test_store.py  test_template.py
tests/fixtures/: form.html  page1.html  page2.html
