[project]
name = "pwflow"
version = "0.1.0"
description = "Run Playwright browser automation from declarative YAML flows. CLI + HTTP service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typer>=0.15",
    "rich>=13.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# provider: cloak — the CloakBrowser stealth binary. https://github.com/CloakHQ/cloakbrowser
# `uv sync --extra cloak` (or `uv add cloakbrowser`). The ~200MB binary downloads on first launch.
cloak = ["cloakbrowser>=0.4"]

[project.scripts]
pwflow = "pwflow.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pwflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
